--- a/01-React/01-Tooling/04-Webpack-From-Scratch/package.json
+++ b/01-React/01-Tooling/04-Webpack-From-Scratch/package.json
@@ -8,6 +8,9 @@
   "devDependencies": {
     "eslint": "^7.32.0 || ^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.2"
+    "eslint-plugin-import": "^2.25.2",
+    "webpack": "^5.73.0",
+    "webpack-cli": "3.3.12",
+    "webpack-dev-server": "^4.9.3"
   }
 }
