--- a/01-React/01-Tooling/04-Webpack-From-Scratch/package.json
+++ b/01-React/01-Tooling/04-Webpack-From-Scratch/package.json
@@ -6,11 +6,18 @@
   "author": "arthur",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "@webpack-cli/serve": "^1.7.0",
+    "babel-loader": "^8.2.5",
     "eslint": "^7.32.0 || ^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.2",
     "webpack": "^5.73.0",
     "webpack-cli": "3.3.12",
-    "webpack-dev-server": "^4.9.3"
+    "webpack-dev-server": "3.11.2"
+  },
+  "dependencies": {
+    "@rails/webpacker": "6.0.0-rc.5"
   }
 }
